--- a/log-effect-syslog.cabal
+++ b/log-effect-syslog.cabal
@@ -2,29 +2,32 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                log-effect-syslog
-version:             0.1
+version:             0.1.0
 synopsis:            Syslog functions for log-effect
--- description:         
+description:         Utility functions for combining log-effect and syslog
 homepage:            https://github.com/greydot/log-effect-syslog
 license:             BSD3
 license-file:        LICENSE
 author:              Lana Black
 maintainer:          lanablack@amok.cc
 -- copyright:           
-category:            Control
+category:            Control, Effect, Logging, Syslog
 build-type:          Simple
 cabal-version:       >=1.10
 
 library
   exposed-modules:     Control.Eff.Log.Syslog
-  -- other-modules:       
-  -- other-extensions:    
   build-depends:       base >=4.9 && <5.0,
                        bytestring >= 0.10,
                        extensible-effects >= 2.5.1.0,
-                       hsyslog >= 5,
-                       log-effect,
+                       hsyslog == 5.*,
+                       log-effect >= 1.0.0,
+                       monad-control >= 1.0,
                        transformers-base
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -Wno-simplifiable-class-constraints
+
+source-repository head
+  type: git
+  location: https://github.com/greydot/log-effect-syslog
