--- a/log-effect-syslog.cabal
+++ b/log-effect-syslog.cabal
@@ -14,6 +14,7 @@ maintainer:          lanablack@amok.cc
 category:            Control, Effect, Logging, Syslog
 build-type:          Simple
 cabal-version:       >=1.10
+extra-source-files:  README.md
 
 library
   exposed-modules:     Control.Eff.Log.Syslog
